# spectator

./: .gitignore  LICENSE  README.md  Spectator TODO  __init__.py  data_manager.py  debug_averaging_region.py  display.py  display_scan.py  example.py  functions.py  getWidgetColors.py  pyproject.toml  run_spectator.sh  spectator.py  spectatorAPP.py  viewers.py  widgets.py  z3showred.sh
config/: file_config.json  viewer_config.py
controller/: spectatorController.py
controller/includes/: dirProxyModel.py
controllers/: app_controller.py  file_app.py  file_controllers.py  viewers.py
examples/: scan_viewer_example.py  scan_viewer_old.py  scan_viewer_themis.py  scan_viewer_themis_1state.py  spectator.py  spectator_example.py  viewer_example.py  z3showred_example.py
models/: __init__.py  axis_types.py  data_model.py  file_model.py  spectrum_model.py  viewer_config.py
spectator/config/: viewer_config.py
spectator/controllers/: __init__.py  app_controller.py  file_app.py  file_controllers.py  viewers.py
spectator/controllers/viewers/: __init__.py  scan_viewer.py  spectator_viewer.py
spectator/models/: __init__.py  axis_config.py  file_model.py  plot_data_model.py  viewer_config.py
spectator/utils/: __init__.py  averaging_lines.py  colors.py  constants.py  info_formatter.py  plotting.py  synchronization.py
spectator/views/: base_widgets.py  file_controls.py  line_controls.py  plot_controls.py  spectrum_limits.py  windows.py
tests/: test_plot_data_model.py
utils/: __init__.py  averaging_lines.py  colors.py  config.py  constants.py  data_utils.py  fixed_dock_label.py  plotting.py  synchronization.py
view/: fileListWidget.py  mainWindow.py  spectatorWidget.py
view/includes/: histogram.py  meanGraph.py  spectBox.py  spectator.py
views/: __init__.py  base_widgets.py  control_widgets.py  file_controls.py  line_controls.py  plot_controls.py  spatial_widgets.py  spectrum_limits.py  spectrum_widgets.py  windows.py
