[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectator"
version = "0.2.0"
description = "Visualization for spectropolarimetric data"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Franziska Zeuner" }]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["spectator*"]
